# civitaikido

./: .gitignore  Dockerfile  civitai_extractor.py  civitai_instrumentator.py  civitaikido.py  dev.sh  docker-build-x.sh  docker-compose.yml  main.py  playwright_interactive.py  pyproject.toml  requirements.txt
.env.d/: buzz_runner.env  dev.env  injector_extractor.env
.env.d/dev/: buzz_runner.env
.github/workflows/: deploy.yml  docker-image.yml
app/: main.py
app/.env.d/: buzz_runner.env
app/core/: civitaikido.py
core/: civitaikido.py
core/config/: __init__.py  config.py  env.py
core/constant/: __init__.py  url.py
core/model/: __init__.py  file_scene_dto.py  injection_extraction_state.py  profile.py  role.py  scene.py  state.py
core/provider/: __init__.py  factory.py  session_service_container.py  session_service_registry.py
core/rest/: __init__.py  browser_management.py  image_generation.py  prompt_injection.py  routine.py  scene.py  state.py
core/service/: __init__.py  browser_manager.py  buzz_collector.py  civitai_page_preparator.py  image_extractor.py  image_generator.py  popup_remover.py  profile_preparator.py  prompt_builder.py  prompt_injector.py  prompt_tree_builder.py  routine_executor.py  scene_manager.py  state_manager.py
core/util/: __init__.py  buzz_collection.py  page_preparation.py  perspective_selection.py  processus.py
deployment/: Dockerfile  docker-compose.yml
src/: civitaikido.py  provider.py
src/config/: __init__.py  config.py  constant.py  env.py  logging.py
src/constant/: __init__.py  logging_strips.py  selector.py  (+3 more)
(+76 files in other folders)
