[tool.poetry]
name = "civitai-injector"
version = "0.1.0"
description = ""
authors = ["You <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
lxml = "^5.1.0"
playwright = "^1.43.0"
playwright-stealth = "^1.0.6"
uvicorn = "^0.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
